--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@ sft_output/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 .DS_Store
+/1_instruction_tuning/notebooks/sft_distill_output
+/4_evaluation/notebooks/.litellm_cache
